Fix padding & align text

--- a/static/styles.3.4.css
+++ b/static/styles.3.4.css
@@ -518,6 +518,6 @@ label.stats-top-course {
     width: 80%;
     margin: auto;
 }
-#subs-stats-button {
+#stats-subs-badge {
     cursor: help;
 }
